# IfcOpenShell

./: .gitignore
Spundwand_files/: Spundwand.ifc  V5_Poisson.stl  V6_Verformung_cutout1.stl  Verformung_cutout2.stl
cmake/: CMakeLists.txt
src/examples/: CMakeLists.txt  IfcOpenHouse.cpp  basemodel.cpp  boolean.cpp  createIFC.cpp  deformation.cpp  extrusion.cpp  fuse.cpp  hellowall.cpp  hellowalls.cpp  hydromapper_multiplecuts.cpp  hydromapper_v2.cpp  hydromapper_v3_defo.cpp  mauer.cpp  middleline.cpp  profiles.cpp  triangulated_faceset.cpp  verformungen.cpp
